objects/ASI_KOR_Sales_Order_History_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Base_Price_Bottle__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch Target</label>
        <referenceTo>ASI_KOR_KPI_Point_Target__c</referenceTo>
        <relationshipLabel>Sales Order History Details (Branch Target)</relationshipLabel>
        <relationshipName>Sales_Order_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Target</label>
        <referenceTo>ASI_KOR_KPI_Point_Target__c</referenceTo>
        <relationshipLabel>Sales Order History Details (Brand Target)</relationshipLabel>
        <relationshipName>Sales_Order_Details3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Converted_Qty_9L__c</fullName>
        <label>Converted Qty (9L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Group_Code__c</fullName>
        <label>Item Group Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_KPI_Point_Value__c</fullName>
        <label>KPI Point Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Quantity_in_Bottles__c</fullName>
        <label>Quantity (in Bottles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Quantity_in_Cases__c</fullName>
        <label>Quantity (in Cases)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Region_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Target</label>
        <referenceTo>ASI_KOR_KPI_Point_Target__c</referenceTo>
        <relationshipLabel>Sales Order History Details (Region Target)</relationshipLabel>
        <relationshipName>Sales_Order_History_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SIT_Report_Customer_Name__c</fullName>
        <formula>ASI_KOR_Sales_Order_History__r.ASI_KOR_Wholesaler__r.ASI_KOR_Customer_Code__c + &quot;  &quot; +   ASI_KOR_Sales_Order_History__r.ASI_KOR_Wholesaler__r.ASI_KOR_Name_Korean__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIT Report - Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SIT_Report_Sub_brand__c</fullName>
        <formula>ASI_KOR_SKU_Product__r.ASI_KOR_Item_Group__r.ASI_KOR_Sub_Brand__r.ASI_KOR_Brand__r.Name</formula>
        <label>SIT Report - Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SKU_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU Code</label>
        <referenceTo>ASI_KOR_SKU_Product__c</referenceTo>
        <relationshipLabel>Sales Order History Details</relationshipLabel>
        <relationshipName>Sales_Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_SOHD_SFID__c</fullName>
        <externalId>true</externalId>
        <label>SYS_INFO_SOHD_SFID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sales_Order_History__c</fullName>
        <label>Sales Order History</label>
        <referenceTo>ASI_KOR_Sales_Order_History__c</referenceTo>
        <relationshipName>Sales_Order_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Salesmen_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesmen Target</label>
        <referenceTo>ASI_KOR_KPI_Point_Target__c</referenceTo>
        <relationshipLabel>Sales Order History Details (Salesmen Target)</relationshipLabel>
        <relationshipName>Sales_Order_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Amount__c</fullName>
        <inlineHelpText>Include VAT</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Supply_Amount__c</fullName>
        <inlineHelpText>Exclude VAT</inlineHelpText>
        <label>Total Supply Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SKU_Code__c</fullName>
        <formula>ASI_KOR_SKU_Product__r.ASI_KOR_SKU_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Name</label>
        <type>Text</type>
    </fields>
    <label>Sales Order History Detail</label>
    <nameField>
        <displayFormat>SOHD-{00000}</displayFormat>
        <label>Sales Order History Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order History Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>